[tool.poetry]
name = "autogluon"
version = "0.1.0"
description = ""
authors = ["gepuro <gepuro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mxnet = "^1.7.0"
mixology = "^0.2.0"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
